index page update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,183 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BitBliss</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap">
+  <link rel="stylesheet" href="./index.css" />
+  <title>Bit Bliss</title>
+  <style>
+
+  </style>
 </head>
 
 <body>
-  <a href="/sign-up">sign-up</a><br/>
-  <a href="/login">login</a>
+  <div class="main-container">
+    <img src="./../assets/svg/ballon1.svg" alt="Your SVG" class="balloon balloon1" />
+    <img src="./../assets/svg/ballon2.svg" alt="Your SVG" class="balloon balloon2" />
+    <img src="./../assets/svg/ballon3.svg" alt="Your SVG" class="balloon balloon3" />
+    <img src="./../assets/svg/ballon4.svg" alt="Your SVG" class="balloon4 balloon" />
+    <img src="./../assets/svg/ballon5.svg" alt="Your SVG" class="balloon5 balloon" />
+    <img src="./../assets/svg/ballon6.svg" alt="Your SVG" class="balloon6 balloon" />
+    <img src="./../assets/svg/ballon7.svg" alt="Your SVG" class="balloon7 balloon" />
+    <img src="./../assets/svg/ballon8.svg" alt="Your SVG" class="balloon8 balloon" />
+    <img src="./../assets/svg/ballon9.svg" alt="Your SVG" class="balloon balloon9" />
+    <img src="./../assets/svg/ballon10.svg" alt="Your SVG" class="balloon balloon10" />
+    <h3 class="headding1">Welcome to</h3>
+    <h1 class="heading2">Bit Bliss</h1>
+    <h3 class="heading3">Bit by Bit, Pure Bliss.</h3>
+    <p class="before-button2">Ready to explore the possibilities?</p>
+    <div id="scrollButton" class="button2"> <img src="./../assets/svg/button2.svg" alt="Your SVG" class="" /></div>
+  </div>
+
+  <div class="second-container">
+    <div id="next-content" class="section section1">
+      <div class="content1">
+        <h1 style="
+        width: 381px;
+height: 74px;
+flex-shrink: 0;color: #FFF;
+        font-family: Montserrat;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 105px; /* 218.75% */">Chat with Ease</h1>
+        <p style="display: flex;
+        width: 502px;
+        height: 106px;
+        flex-direction: column;
+        justify-content: center;
+        flex-shrink: 0;color: #F4E5FF;
+font-family: Montserrat;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 144%; /* 25.92px */">Instantly connect with friends or teammates. Chat effortlessly and stay in sync,
+          making communication a
+          breeze.</p>
+      </div>
+      <div class="content2">
+        <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg1" />
+        <img src="./../assets/svg/chatsvg2.svg" alt="Your SVG" class="chatsvg2" />
+      </div>
+    </div>
+    <div class="section section2">
+      <div class="content1">
+        <h1 style="width: 523px;
+        height: 74px;
+        flex-shrink: 0;color: #FFF;
+  
+  /* BitBliss Bold/H1 */
+  font-family: Montserrat;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 105px; /* 218.75% */">Share Files in a Snap</h1>
+        <p style="display: flex;
+  width: 502px;
+  height: 106px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;color: #F4E5FF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 144%; /* 25.92px */">Swap files seamlessly! Our platform makes sharing photos, documents, and more a
+          simple, hassle-free experience.</p>
+      </div>
+      <div class="content2">
+        <!-- <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg1" /> -->
+        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="chatsvg2" />
+      </div>
+    </div>
+    <div class="section section3">
+      <div class="content1">
+        <h1 style="width: 523px;
+        height: 74px;
+        flex-shrink: 0;color: #FFF;
+  
+  /* BitBliss Bold/H1 */
+  font-family: Montserrat;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 105px; /* 218.75% */">Team Up on Projects</h1>
+        <p style="display: flex;
+  width: 502px;
+  height: 106px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0; color: #F4E5FF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 144%; /* 25.92px */">Boost productivity! Collaborate on repositories effortlessly. Track changes, work
+          together, and achieve success as a team.</p>
+      </div>
+      <div class="content2">
+        <!-- <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg1" /> -->
+        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="chatsvg2" />
+      </div>
+
+    </div>
+    <div class="section section3">
+      <div class="content1">
+        <h1 style="width: 523px;
+        height: 74px;
+        flex-shrink: 0;color: #FFF;
+  
+  /* BitBliss Bold/H1 */
+  font-family: Montserrat;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 105px; /* 218.75% */">Team Up on Projects</h1>
+        <p style="display: flex;
+  width: 502px;
+  height: 106px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0; color: #F4E5FF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 144%; /* 25.92px */">Boost productivity! Collaborate on repositories effortlessly. Track changes, work
+          together, and achieve success as a team.</p>
+      </div>
+      <div class="content2">
+        <!-- <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg1" /> -->
+        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="chatsvg2" />
+      </div>
+
+    </div>
+  </div>
+
+  <div class="before-footer">
+    <div class="ellipse">
+      <h1 class="heading2">Bit Bliss</h1>
+      <h3 class="heading3">Where code meets collaboration and fun</h3>
+      <button class="join-now" onclick="sign_up()">Join Now</button>
+    </div>
+  </div>
+  <footer>
+    <button class="footer-button"></button>
+    <div class="footer"></div>
+  </footer>
 </body>
+<script>
+
+  const scrollButton = document.getElementById('scrollButton');
+  const nextContent = document.getElementById('next-content');
+
+  scrollButton.addEventListener('click', () => {
+    nextContent.scrollIntoView({ behavior: 'smooth', block: 'center' });
+  });
+
+
+  function sign_up() {
+    window.location = "/sign-up";
+  }
+</script>
 
 </html>
