--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,9 +7,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap">
   <link rel="stylesheet" href="./index.css" />
   <title>Bit Bliss</title>
-  <style>
-
-  </style>
 </head>
 
 <body>
@@ -34,123 +31,53 @@
   <div class="second-container">
     <div id="next-content" class="section section1">
       <div class="content1">
-        <h1 style="
-        width: 381px;
-height: 74px;
-flex-shrink: 0;color: #FFF;
-        font-family: Montserrat;
-        font-size: 48px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 105px; /* 218.75% */">Chat with Ease</h1>
-        <p style="display: flex;
-        width: 502px;
-        height: 106px;
-        flex-direction: column;
-        justify-content: center;
-        flex-shrink: 0;color: #F4E5FF;
-font-family: Montserrat;
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: 144%; /* 25.92px */">Instantly connect with friends or teammates. Chat effortlessly and stay in sync,
-          making communication a
+        <h1>Chat with Ease</h1>
+        <p>Instantly connect with friends or teammates. Chat effortlessly and stay in sync, making communication a
           breeze.</p>
       </div>
       <div class="content2">
-        <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg1" />
-        <img src="./../assets/svg/chatsvg2.svg" alt="Your SVG" class="chatsvg2" />
+        <img src="./../assets/svg/chatsvg2.svg" alt="Your SVG" class="chatsvg chatsvg2" />
+        <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg chatsvg1" />
+        <img src="./../assets/svg/chatsvg3.svg" alt="Your SVG" class="chatsvg chatsvg3" />
+        <img src="./../assets/svg/chatsvg3.svg" alt="Your SVG" class="chatsvg chatsvg4" />
+        <img src="./../assets/svg/chatsvg3.svg" alt="Your SVG" class="chatsvg chatsvg5" />
       </div>
     </div>
     <div class="section section2">
       <div class="content1">
-        <h1 style="width: 523px;
-        height: 74px;
-        flex-shrink: 0;color: #FFF;
-  
-  /* BitBliss Bold/H1 */
-  font-family: Montserrat;
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 105px; /* 218.75% */">Share Files in a Snap</h1>
-        <p style="display: flex;
-  width: 502px;
-  height: 106px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;color: #F4E5FF;
-  font-family: Montserrat;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 144%; /* 25.92px */">Swap files seamlessly! Our platform makes sharing photos, documents, and more a
+        <h1>Share Files in a Snap</h1>
+        <p>Swap files seamlessly! Our platform makes sharing photos, documents, and more a
           simple, hassle-free experience.</p>
       </div>
       <div class="content2">
-        <!-- <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg1" /> -->
-        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="chatsvg2" />
+        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="sharesvg sharesvg2" />
+        <div class="sharesvg sharesvg3"></div>
+        <img src="./../assets/svg/sharesvg1.svg" alt="Your SVG" class="sharesvg sharesvg1" />
       </div>
     </div>
     <div class="section section3">
       <div class="content1">
-        <h1 style="width: 523px;
-        height: 74px;
-        flex-shrink: 0;color: #FFF;
-  
-  /* BitBliss Bold/H1 */
-  font-family: Montserrat;
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 105px; /* 218.75% */">Team Up on Projects</h1>
-        <p style="display: flex;
-  width: 502px;
-  height: 106px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0; color: #F4E5FF;
-  font-family: Montserrat;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 144%; /* 25.92px */">Boost productivity! Collaborate on repositories effortlessly. Track changes, work
+        <h1>Team Up on Projects</h1>
+        <p>Boost productivity! Collaborate on repositories effortlessly. Track changes, work
           together, and achieve success as a team.</p>
       </div>
       <div class="content2">
-        <!-- <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg1" /> -->
-        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="chatsvg2" />
+        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="sharesvg sharesvg2" />
+        <div class="sharesvg sharesvg3"></div>
+        <img src="./../assets/svg/buildsvg.svg" alt="Your SVG" class="sharesvg buildsvg" />
       </div>
 
     </div>
-    <div class="section section3">
+    <div class="section section4">
       <div class="content1">
-        <h1 style="width: 523px;
-        height: 74px;
-        flex-shrink: 0;color: #FFF;
-  
-  /* BitBliss Bold/H1 */
-  font-family: Montserrat;
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 105px; /* 218.75% */">Team Up on Projects</h1>
-        <p style="display: flex;
-  width: 502px;
-  height: 106px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0; color: #F4E5FF;
-  font-family: Montserrat;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 144%; /* 25.92px */">Boost productivity! Collaborate on repositories effortlessly. Track changes, work
-          together, and achieve success as a team.</p>
+        <h1>Game On!</h1>
+        <p>Level up your gaming. Connect with fellow gamers, share tips, and dive into exciting adventures together. The
+          ultimate gaming experience awaits!</p>
       </div>
       <div class="content2">
-        <!-- <img src="./../assets/svg/chatsvg1.svg" alt="Your SVG" class="chatsvg1" /> -->
-        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="chatsvg2" />
+        <img src="./../assets/svg/sharesvg2.svg" alt="Your SVG" class="sharesvg sharesvg2" />
+        <div class="sharesvg sharesvg3"></div>
+        <img src="./../assets/svg/gamesvg.svg" alt="Your SVG" class="sharesvg sharesvg1" />
       </div>
 
     </div>
@@ -158,9 +85,9 @@ line-height: 144%; /* 25.92px */">Instantly connect with friends or teammates. C
 
   <div class="before-footer">
     <div class="ellipse">
-      <h1 class="heading2">Bit Bliss</h1>
-      <h3 class="heading3">Where code meets collaboration and fun</h3>
-      <button class="join-now" onclick="sign_up()">Join Now</button>
+      <h1 class="footer-heading2">Bit Bliss</h1>
+    <h3 class="footer-heading3">Where code meets collaboration and fun</h3>
+    <div class="join-now" onclick="sign_up()">Join Now</div>
     </div>
   </div>
   <footer>
@@ -169,7 +96,6 @@ line-height: 144%; /* 25.92px */">Instantly connect with friends or teammates. C
   </footer>
 </body>
 <script>
-
   const scrollButton = document.getElementById('scrollButton');
   const nextContent = document.getElementById('next-content');
 
@@ -177,6 +103,45 @@ line-height: 144%; /* 25.92px */">Instantly connect with friends or teammates. C
     nextContent.scrollIntoView({ behavior: 'smooth', block: 'center' });
   });
 
+  function isElementInViewport(el) {
+    const rect = el.getBoundingClientRect();
+    return (
+      rect.top >= 0 &&
+      rect.left >= 0 &&
+      rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+      rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+    );
+  }
+
+  function handleScroll() {
+    const h1Elements = document.querySelectorAll('.content1 > h1');
+    const pElements = document.querySelectorAll('.content1 > p');
+    const elements = document.querySelectorAll('.chatsvg, .sharesvg');
+
+    h1Elements.forEach(h1Element => {
+      if (isElementInViewport(h1Element)) {
+        h1Element.style.opacity = 1;
+        h1Element.style.transform = 'translateY(0)';
+      }
+    });
+
+    pElements.forEach(pElement => {
+      if (isElementInViewport(pElement)) {
+        pElement.style.opacity = 1;
+        pElement.style.transform = 'translateY(0)';
+      }
+    });
+
+    elements.forEach(svg => {
+      if (isElementInViewport(svg)) {
+        svg.style.opacity = 1;
+        svg.style.transform = 'translateY(0)';
+        svg.style.animation = 'moveUpAndDown3 8s ease-in-out infinite';
+      }
+    })
+  }
+
+  window.addEventListener('scroll', handleScroll);
 
   function sign_up() {
     window.location = "/sign-up";
