sign up page update

--- a/frontend/landingPage.html
+++ b/frontend/landingPage.html
@@ -84,7 +84,7 @@
     <div class="ellipse">
       <h1 class="footer-heading2">Bit Bliss</h1>
       <h3 class="footer-heading3">Where code meets collaboration and fun</h3>
-      <div class="join-now" onclick="sign_up()">Join Now</div>
+      <div class="join-now" onclick="account()">Join Now</div>
     </div>
   </div>
   <footer id="footer">
@@ -158,8 +158,8 @@
 
   window.addEventListener('scroll', handleScroll);
 
-  function sign_up() {
-    window.location = "/sign-up";
+  function account() {
+    window.location = "/account";
   }
 
   let _footer = false;
