Revert "fixed grammar"
This reverts commit 3b7e982649b2b112d48cc2bcece13db037b8985a.

--- a/frontend/newaccount.html
+++ b/frontend/newaccount.html
@@ -43,7 +43,7 @@
       <b class="new-to-bit-container">
         <span class="new-to-bit-container1">
           <p class="new-to-bit-bliss">
-            <span class="new-to">New to the</span>
+            <span class="new-to">New to </span>
             <span>Bit Bliss?</span>
           </p>
           <p class="fantastic-were-here">
